ChangeLog for Version 3.11.4:

2007-07-12   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* fight.cpp, monthly.cpp: Added more places where Wisdom is used.
* date.cpp: Bug causing liberals who are caught trying to kidnap their dates
to be not properly charged with kidnapping has been fixed.

2007-07-12   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* chase.cpp: Fixed multiple crashes related to car theft chases.
* creature.cpp: Secretaries now get a little bit of writing skill.
* activities.cpp: Car locks are harder to jimmy and it is harder to hotwire
cars. Chance of getting caught pulling away now considers whether you broke
the window and whether you are trying to steal a police car.
* daily.cpp: You are now charged with car theft if you give up to police when
stealing a car.
* justice.cpp: Resisting arrest, disturbing the peace, and loitering no longer
report how many charges you are faced with.
* talk.cpp: You may now voluntarily surrender to the police on site.

2007-07-10   Chris Johnson   <grundee@users.sourceforge.net>
* activate.cpp: Added funds to more screens.

2007-07-10   Chris Johnson   <grundee@users.sourceforge.net>
* commondisplay.h: Added real name to the profile of a liberal/conservative
page.

2007-07-10   Chris Johnson   <grundee@users.sourceforge.net>
* includes.h, commondisplay.cpp: Added function called printfunds(3) which 
prints funds at the specified location, prefixes some text, and then returns
everything (such as color and cursor location) back to the way it was before.
* activate.cpp, reviewmode.cpp, baseactions.cpp, commondisplay.cpp, date.cpp:
Changes all money displaying to use new function.
* newgame.cpp: Added ability to use real name by default for character 
creation.

ChangeLog for Version 3.11.3:

2007-07-08   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* includes.h, configure.ac: Updated to version 3.11.3 for release.

2007-07-08   Jonathan Stickles   <jonathansfox@users.sourceforge.net>